Version 1.2.0-SNAPSHOT
  New features
    - Verbose error & info message in case of MD5 mismatch (closes #25)
    - Remove links to online feedback forms (not just the forms themselves) from 29 books in 4,271
      files. Inline feedback forms are now only left in 2 books (SHELL_PROG and VB_2008) and 191
      files, in the other books they have been replaced by the publisher.
  Changed features
    - Several changes to support publisher's re-branding from Galileo to Rheinwerk
    - Add book WINDOWS_SERVER_2012, remove unavailable book PYTHON
    - Enhancement: handle truncated (partly downloaded) ZIP file gracefully. Throw exception with
      message: "Probably the download of <zipFile> was interrupted. Please delete the file and
      retry."
    - Bugfix: handle illegal book ID correctly
    - Bugfix: titles of Java_Insel and Javascript books were swapped in config.xml
  Internal changes
    - Improve error handling/logging for failed file system operations such as creating directories
      or renaming files
    - Upgrade Java/AspectJ source/target levels to 1.8.
    - Upgrade AspectJ 1.8.13 and AspectJ Maven 1.11
    - Change project directory layout to Maven default
    - Switch to com.jolira Fork or One-JAR plugin available on Maven Central because the original
      org.dstovall plugin repository is no longer available


Version 1.1.0
  New features
    - New command-line option "-w|--write-config" writes an editable book list file config.xml
      to current the current directory. This is an easy way for JAR users to extract the embedded
      default config.xml to disk and edit it subsequently, e.g. in order to add new books not
      contained in the upstream version. This way they do not have to wait for me to update the
      Git repo and the downloadable JAR. User self-service. :-)
    - New command-line option "-c|--check-avail" checks Galileo homepage for available books,